--- a/index.html
+++ b/index.html
@@ -2,16 +2,29 @@
 <html lang="es">
 
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="email form" content="email form, phone, email">
   <title>Email</title>
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
   <script src="js/validate.js" defer></script>
   <script src="js/index.js" defer></script>
 </head>
 
 <body>
-
+  <div class="container">
+    <h1>Email Form</h1>
+    <form action="" class="form-container">
+      <div class="form-control">
+        <label class="input-label" for="email">Username</label>
+        <input class="input" type="email" id="email" placeholder="sophie@example.com" />
+      </div>
+    </form>
+  </div>
 </body>
 
 </html>
