Add destinatarion a formulario

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
     <h1>Email Form</h1>
     <form action="" class="form-container">
       <div class="form-control">
-        <label class="input-label" for="email">Username</label>
-        <input class="input" type="email" id="email" placeholder="sophie@example.com" />
+        <label class="input-label" for="email-remitente">Remitente</label>
+        <input class="input" type="email" id="email-remitente" placeholder="poor-student@isdicoders.com" />
+      </div>
+      <div class="form-control">
+        <label class="input-label" for="email-destinatario">Destinatario</label>
+        <input class="input" type="email" id="email-destinatario" placeholder="sophie@example.com" />
       </div>
     </form>
   </div>
