--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <label class="input-label" for="email-destinatario">Destinatario</label>
         <input class="input" type="email" id="email-destinatario" placeholder="sophie@example.com" />
       </div>
+      <div class="form-control">
+        <label class="input-label" for="asunto">Asunto</label>
+        <input class="input" type="text" id="asunto" placeholder="asunto">
+      </div>
     </form>
   </div>
 </body>
