Add Textarea and styles

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <label class="input-label" for="asunto">Asunto</label>
         <input class="input" type="text" id="asunto" placeholder="asunto">
       </div>
+      <div class="form-control">
+        <label class="input-label" for="cuerpo">Cuerpo</label>
+        <textarea id="cuerpo" name="cuerpo" rows="4" cols="50" placeholder="Escribe aquí"></textarea>
+      </div>
     </form>
   </div>
 </body>
