--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <label class="input-label" for="cuerpo">Cuerpo</label>
         <textarea id="cuerpo" name="cuerpo" rows="4" cols="50" placeholder="Escribe aquí"></textarea>
       </div>
+      <div class="form-control">
+        <label class="input-label" for="add-file">Adjunta un archivo</label>
+
+        <input class="input" type="file" id="add-file" name="add-file" accept="image/png, image/jpeg" />
+      </div>
     </form>
   </div>
 </body>
