--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 
         <input class="input" type="file" id="add-file" name="add-file" accept="image/png, image/jpeg" />
       </div>
+      <div class="form-control checkbox">
+        <label class="input-label" for="terms">Programar envío</label>
+        <input class="input" type="checkbox" id="terms">
+      </div>
     </form>
   </div>
 </body>
